--- a/web/public/index.html
+++ b/web/public/index.html
@@ -1,31 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta
-      name="description"
-      content="A full stack intuitive point of sales application."
-    />
-
-    <meta name="apple-mobile-web-app-title" content="MyCashier">
-    <meta name="application-name" content="MyCashier">
-    <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="theme-color" content="#ffffff">
-
-    <title>MyCashier</title>
-
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
-
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
-  </head>
-  <body>
-    <noscript>Sorry, your browser does not seems to support this application. Please upgrade your browser to modern one!</noscript>
-    <div id="root"></div>
-  </body>
+<head>
+	<meta charset="utf-8" />
+	<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<meta name="theme-color" content="#000000" />
+	<meta
+			name="description"
+			content="Web site created using create-react-app"
+	/>
+	<link rel="apple-touch-icon" href="logo192.png" />
+	<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+	<title>MyCashier</title>
+</head>
+<body>
+<noscript>You need to enable JavaScript to run this app.</noscript>
+<div id="root"></div>
+</body>
 </html>
